# Cross-platform-installer-test

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
src/: main  main.cpp
